--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <base href="/dailydiff.github.io/" />
   </head>
   <body class="h-full bg-slate-50">
     <div class="[font-family:var(--font-family-body)]">
